fix(client): remove unintended scrollbars in execution list

--- a/client/src/app/lab-editor/execution-list/execution-list-theme.scss
+++ b/client/src/app/lab-editor/execution-list/execution-list-theme.scss
@@ -45,6 +45,10 @@
       color: #888;
     }
 
+    .mat-expansion-panel-body {
+      overflow: hidden;
+    }
+
     .finished & { border-left-color: #39aa56; }
     .failed  & { border-left-color: #db4545; }
     .executing & { border-left-color: mat-color($accent); }
